Add checkbox conditional for circle or emoji element append

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
           <div class=""></div>
         </label>
       </div>
+      <p class="switch-label" id="emoji-label">Emoji</p>
+      <p class="switch-label" id="circle-label">Circle</p>
     </section>
     <div class="container">
       <!-- append divs here -->
