add clear button and jquery

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       </div>
       <p class="switch-label" id="emoji-label">Emoji</p>
       <p class="switch-label" id="circle-label">Circle</p>
+      <a class="button" id="clearButton" href="#">CLEAR!</a>
     </section>
     <div class="container">
       <!-- append divs here -->
